--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 </div>
             </div>
         </div>
+
+        <hr>
         <div class="group-1">
             <div class="skills">
                 <h3 class="title"> Skills</h3>
@@ -121,8 +123,8 @@
                         <span>/Ali Haider</span>
                     </a>
                     <a href="#" class="social_item">
-                        <i data-feather="instagram"></i>
-                        <span>/mustuffuh</span>
+                        <i data-feather="github"></i>
+                        <span>/alihaider082</span>
                     </a>
                 </div>
             </div>
